--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *.log
 .DS_Store
 .env
-.env.backup
+.env.backup*
 .env.production
 .phpactor.json
 .phpunit.result.cache
@@ -18,6 +18,22 @@
 /public/storage
 /storage/*.key
 /storage/pail
+/storage/app/private/*
+!/storage/app/private/.gitignore
+/storage/app/public/*
+!/storage/app/public/.gitignore
+/storage/framework/cache/*
+!/storage/framework/cache/.gitignore
+/storage/framework/sessions/*
+!/storage/framework/sessions/.gitignore
+/storage/framework/testing/*
+!/storage/framework/testing/.gitignore
+/storage/framework/views/*
+!/storage/framework/views/.gitignore
+/storage/logs/*
+!/storage/logs/.gitignore
+/bootstrap/cache/*
+!/bootstrap/cache/.gitignore
 /vendor
 Homestead.json
 Homestead.yaml
