--- a/.gitignore
+++ b/.gitignore
@@ -18,21 +18,23 @@
 /public/storage
 /storage/*.key
 /storage/pail
-# Storage directories - ignore everything including .gitignore files
-/storage/app/private/
-/storage/app/public/
-/storage/framework/cache/
-/storage/framework/sessions/
-/storage/framework/testing/
-/storage/framework/views/
-/storage/logs/
-/bootstrap/cache/
-
-# But keep the main storage structure
-!/storage/
-!/storage/app/
-!/storage/framework/
-!/bootstrap/
+# Storage directories - ignore contents but keep structure
+/storage/app/private/*
+!/storage/app/private/.gitkeep
+/storage/app/public/*
+!/storage/app/public/.gitkeep
+/storage/framework/cache/*
+!/storage/framework/cache/.gitkeep
+/storage/framework/sessions/*
+!/storage/framework/sessions/.gitkeep
+/storage/framework/testing/*
+!/storage/framework/testing/.gitkeep
+/storage/framework/views/*
+!/storage/framework/views/.gitkeep
+/storage/logs/*
+!/storage/logs/.gitkeep
+/bootstrap/cache/*
+!/bootstrap/cache/.gitkeep
 /vendor
 Homestead.json
 Homestead.yaml
