fix: Melhorar .gitignore para ignorar cache e logs corretamente
- Adicionar regras específicas para ignorar cache e logs
- Manter apenas .gitkeep para preservar estrutura de diretórios
- Evitar rastreamento de arquivos temporários no repositório

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 /public/storage
 /storage/*.key
 /storage/pail
-# Storage directories - ignore contents but keep structure
+# Storage directories - ignore everything except .gitkeep files
 /storage/app/private/*
 !/storage/app/private/.gitkeep
 /storage/app/public/*
@@ -35,6 +35,12 @@
 !/storage/logs/.gitkeep
 /bootstrap/cache/*
 !/bootstrap/cache/.gitkeep
+
+# Additional cache and log files to ignore
+/storage/framework/cache/data/*
+/storage/framework/sessions/*
+/storage/framework/views/*
+/storage/logs/*
 /vendor
 Homestead.json
 Homestead.yaml
