--- a/.env.example
+++ b/.env.example
@@ -63,3 +63,7 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+# Google Maps API Key (opcional - para melhor qualidade visual)
+# Obtenha em: https://console.cloud.google.com/
+# Limite gratuito: 28.000 mapas/mês
+GOOGLE_MAPS_API_KEY=
