--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.log
 .DS_Store
 .env
+.env.*
+!.env.example
 .env.backup*
 .env.production
 .phpactor.json
@@ -35,6 +37,10 @@
 !/storage/logs/.gitkeep
 /bootstrap/cache/*
 !/bootstrap/cache/.gitkeep
+
+# Ignore .gitignore helper files inside storage/bootstrap to avoid noise in prod
+/storage/**/.gitignore
+/bootstrap/cache/.gitignore
 
 # Additional cache and log files to ignore
 /storage/framework/cache/data/*
