--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
         "intervention/image": "^3.0",
         "laravel/framework": "^12.0",
         "laravel/socialite": "^5.23",
-        "laravel/tinker": "^2.10.1",
-        "stripe/stripe-php": "^18.0"
+        "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
