feat: implementar build automÃ¡tico do frontend via git hooks
- Adicionar Husky para gerenciar git hooks
- Criar hook pre-commit que executa build automaticamente
- Remover public/build do .gitignore para commit dos arquivos
- Adaptar deploy.sh para nÃ£o executar npm (apenas verificar arquivos)
- Criar build-local.sh para build manual quando necessÃ¡rio
- Adicionar scripts de verificaÃ§Ã£o e configuraÃ§Ã£o de hooks
- Atualizar documentaÃ§Ã£o com novo processo
- Commit inicial dos arquivos de build

--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,11 @@
 /.zed
 /auth.json
 /node_modules
-/public/build
 /public/hot
 /public/storage
+# Husky (manter os hooks no repositório)
+!.husky/pre-commit
+!.husky/_/
 /storage/*.key
 /storage/pail
 # Storage directories - ignore everything except .gitkeep files
